# crewAgents

./: README.md  pyproject.toml  report.md  topics.json
src/: topics.json
src/crewagents/: crew.py  main.py
src/crewagents/config/: agents.yaml  tasks.yaml
